# sico

./: .clang-format  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ubuntu.yml  windows.yml
doc/: frames.md  types.md
examples/: examples.cpp
include/sico/: sico.h  sico.hpp
include/sico/conversions/: ecef_lla.hpp  enu_local.hpp  geo_tangent.hpp  lla_mercator.hpp  lla_utm.hpp  local_local.hpp
include/sico/frames/: local_tangent.hpp  mercator.hpp  object_local.hpp
include/sico/types/: angles.hpp  ecef.hpp  enu.hpp  forward.hpp  linear_algebra.hpp  lla.hpp  local.hpp  ned.hpp  orientations.hpp  stream.hpp  units.hpp  utm.hpp
src/: sico.cpp
src/conversions/: ecef_lla.cpp  enu_local.cpp  geo_tangent.cpp  lla_mercator.cpp  lla_utm.cpp  local_local.cpp
src/frames/: local_tangent.cpp  mercator.cpp  object_local.cpp
src/types/: ecef.cpp  enu.cpp  lla.cpp  local.cpp  orientations.cpp
tests/: conversions.ecef_lla.t.cpp  conversions.enu_local.t.cpp  conversions.geo_tangent.t.cpp  conversions.lla_mercator.t.cpp  conversions.lla_utm.t.cpp  conversions.local_local.t.cpp  frames.local_tangent.t.cpp  frames.mercator.t.cpp  frames.object_local.t.cpp  sico.c.t.cpp  types.angles.t.cpp  types.linear_algebra.t.cpp  types.operators.t.cpp
